# my-llm

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: routes.py
backend/src/app/core/: config.py  dependencies.py  exceptions.py
backend/src/app/models/: schemas.py
backend/src/app/providers/: base.py  ollama.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
